[project]
name = "pyssed"
version = "0.1.0"
description = "The Mixture Adaptive Design (MAD): An experimental design for anytime-valid causal inference on Multi-Armed Bandits."
readme = "README.md"
authors = [
    { name = "Daniel Molitor", email = "molitdj97@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
