[project]
name = "pyssed"
version = "0.1.0"
description = "The Mixture Adaptive Design (MAD): An experimental design for anytime-valid causal inference on Multi-Armed Bandits."
readme = "README.md"
authors = [
    { name = "Daniel Molitor", email = "molitdj97@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.2",
    "pandas>=2.0.0",
    "plotnine>=0.12.0",
    "tqdm>=4.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.0.0",
]
